# Spawnie

./: .gitignore  README.md  pyproject.toml
bam/: NOTES.md  verify.py
bam/model/: sketch.json
docs/: workflow-process-analysis.md
examples/: slow_workflow.json  test-workflow.json  test_workflow.json
src/spawnie/: __init__.py  __main__.py  api.py  config.py  daemon.py  detection.py  findings.py  models.py  monitor.py  prompts.py  queue.py  registry.py  session.py  stdin_helper.py  tracker.py  utils.py  workflow.py
src/spawnie/providers/: __init__.py  base.py  claude.py  copilot.py  mock.py
tests/: __init__.py  test_api.py  test_detection.py  test_providers.py  test_queue.py  test_registry.py  test_session.py  test_tracker.py  test_workflow.py
