[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spawnie"
version = "0.3.0"
description = "Spawn tasks to CLI agents (Claude CLI, Copilot CLI) instead of making API calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Spawnie Contributors" }
]
keywords = [
    "cli",
    "claude",
    "copilot",
    "llm",
    "agent",
    "task-queue",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
monitor = [
    "textual>=0.50.0",
]
all = [
    "textual>=0.50.0",
]

[project.scripts]
spawnie = "spawnie.__main__:main"

[project.urls]
Homepage = "https://github.com/spawnie/spawnie"
Documentation = "https://github.com/spawnie/spawnie#readme"
Repository = "https://github.com/spawnie/spawnie"

[tool.hatch.build.targets.wheel]
packages = ["src/spawnie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/spawnie"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
